--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <div>magnus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia itaque enim beatae sit commodi sequi suscipit nesciunt, qui fugit. In sit vero quis.</div>
       <div class="line1">
         <div><textarea placeholder="Your name" name="Your name" id="" cols="50" rows="2" ></textarea></div>
-        <div><textarea placeholder="Your emial" name="Your email" id="" cols="50" rows="2"></textarea></div>
+        <div><textarea placeholder="Your email" name="Your email" id="" cols="50" rows="2"></textarea></div>
         <div><textarea placeholder="Your phone" name="Your phone" id="" cols="50" rows="2"></textarea></div>
       </div>
       <div class="line1">
